--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -27,13 +27,7 @@
     </nav>
     <main> 
         <h1 \t>¿Que es la Movilidad Urbana?</h1>
-        <p>La movilidad urbana es el conjunto de desplazamientos, tanto de personas como de mercancías, que se producen en una ciudad, bien sea en transporte público o privado.</p>
-
-        <h1>¿Cuáles son los tipos de movilidad urbana?</h1>
-        <p>
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-        </p>
+        <p>Un parrafo soy</p>
     </main>
     <footer> 
         Soy el pie de pagina
