--- a/index.html
+++ b/index.html
@@ -6,37 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movilidad Urbana</title>
     <link rel="stylesheet" href="CSS/style.css">
-
+    <style>
+        header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px;
+        }
+        nav ul {
+            display: flex;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        nav ul a {
+            text-decoration: none;
+            color: black;
+            margin-left: 20px;
+        }
+    </style>
 </head>
-<body> 
-    <header> 
-        <img src="Img/Logo.jpg"  alt="Imagen de Encabezado">
+<body>
+    <header>
+        <img src="Img/Logo.jpg" alt="Imagen de Encabezado" style="height: 50px;">
+        <nav>
+            <ul>
+                <a href="index.html"><li>Inicio</li></a>
+                <a href="AcercaDe.html"><li>Acerca De</li></a>
+                <a href="Contacto.html"><li>Contacto</li></a>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <a href="index.html">
-                <li>Inicio </li>
-            </a>
-            <a href="AcercaDe.html">
-                <li>Acerca De </li>
-            </a>
-            <a href="Contacto.html">
-                <li>Contacto </li>
-            </a>
-        </ul>
-    </nav>
-    <main> 
-        <h1 \t>¿Que es la Movilidad Urbana?</h1>
+    <main>
+        <h1>¿Qué es la Movilidad Urbana?</h1>
         <p>La movilidad urbana es el conjunto de desplazamientos, tanto de personas como de mercancías, que se producen en una ciudad, bien sea en transporte público o privado.</p>
-
+ 
         <h1>¿Cuáles son los tipos de movilidad urbana?</h1>
         <p>
-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
         </p>
     </main>
-    <footer> 
-        Soy el pie de pagina
+    <footer>
+        <p> Soy el pie de página</p>
     </footer>
 </body>
 </html>
