Modificacion de CSS y HTML Index

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <img src="Img/Logo.jpg" alt="Imagen de Encabezado" style="height: 50px;">
         <nav>
             <ul>
-                <a href="index.html"><li>Inicio</li></a>
-                <a href="AcercaDe.html"><li>Acerca De</li></a>
-                <a href="Contacto.html"><li>Contacto</li></a>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="AcercaDe.html">Acerca De</a></li>
+                <li><a href="Contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -48,7 +48,7 @@
         </p>
     </main>
     <footer>
-        <p> Soy el pie de página</p>
+        <p>Soy el pie de página</p>
     </footer>
 </body>
 </html>
